# GLBasicEngine

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
assets/: fsh.glsl  vsh.glsl
include/: shaderProgram.h
include/buffer/: buffer.h  vertex-array.h
include/camera/: camera.h
include/enum/: bufferTarget.h  glPrimative.h
include/shader/: shaderProgram.h
src/: shaderProgram.cpp
src/buffer/: buffer.cpp  vertex-array.cpp
src/camera/: camera.cpp
src/shader/: shaderProgram.cpp
